tests/ast-grep/fail/src/domain/direct_annotations.py
def read_annotations(obj: object) -> dict[str, object]:
    return obj.__annotations__
